[package]
name = "cargo-ctags"
version = "0.2.5"
authors = [" <raybsolomon@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "analyze dependencies and generate single TAGS for cargo projects"
keywords = ["subcommand", "cargo"]
readme = "README.md"
repository = "https://github.com/urugang/cargo-ctags"
homepage = "https://github.com/urugang/cargo-ctags"

[dependencies]
serde_json = "1.0"
